--- a/styles/style.css
+++ b/styles/style.css
@@ -6,15 +6,20 @@
 
 * {
   font-family: Spectral, monospace;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   padding: 0;
+  --navbar-bg-color: rgba(255, 255, 255, 0.9);
+  --header-title-bg-color: rgba(255, 255, 255, 0.6);
+  --primary-color: orangered;
+  --secondary-color: royalblue;
 }
 
 .clearfix:after {
-  content: ” “; /* Older browser do not support empty content */
+  content: " "; /* Older browser do not support empty content */
   visibility: hidden;
   display: block;
   height: 0;
@@ -22,16 +27,18 @@ body {
 }
 
 .navbar {
-  background-color: whitesmoke;
+  background-color: var(--navbar-bg-color);
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .navbar > .navbar-list {
   list-style-type: none;
   margin: 0;
   float: right;
+  font-size: 0;
 }
 
 .navbar > .navbar-list > .navbar-item {
@@ -41,12 +48,18 @@ body {
 .navbar > .navbar-list > .navbar-item a {
   padding: 15px;
   text-decoration: none;
-  color: orangered;
+  color: var(--primary-color);
   display: inline-block;
+  font-size: 16px;
 }
 
 .navbar > .navbar-list > .navbar-item.active a {
-  background-color: royalblue;
+  background-color: var(--secondary-color);
+  color: white;
+}
+
+.navbar > .navbar-list > .navbar-item:hover a {
+  background-color: var(--primary-color);
   color: white;
 }
 
@@ -65,8 +78,8 @@ header > .title-and-cite {
   width: 100%;
   position: absolute;
   text-align: center;
-  color: royalblue;
-  background-color: rgba(255, 255, 255, 0.6);
+  color: var(--secondary-color);
+  background-color: var(--header-title-bg-color);
 }
 
 header .title {
@@ -75,6 +88,94 @@ header .title {
 }
 
 header .title-cite {
-  font-family: Spiderman, monospace;
+  font-family: Impact, Spectral, monospace;
   font-size: 20px;
+}
+
+.section-container {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.section-reverse {
+  background-color: var(--secondary-color);
+  color: white;
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
+}
+
+.about-me > .spiderman-video {
+  float: left;
+  max-width: 50%;
+}
+
+.about-me > .spiderman-info {
+  float: right;
+  max-width: 50%;
+}
+
+.team-member-photo img, .transport-item img {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
+}
+
+footer {
+  background-color: var(--secondary-color);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2em;
+}
+
+#googleMap {
+  height: 400px;
+}
+
+.form {
+    padding: 0 20px;
+}
+
+.form .form-row {
+    padding: 10px;
+}
+
+input {
+  padding: 4px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type=button], input[type=submit], button {
+  background-color: var(--secondary-color);
+  border: none;
+  color: white;
+  padding: 15px 40px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 0px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+thead > tr {
+  background-color: #F5F5F5;
+}
+
+th {
+  height: 50px;
+}
+
+th, td {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+}
+
+tbody > tr:hover {
+  background-color: #dedddd;
 }
