--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ body {
   color: var(--primary-color);
   display: inline-block;
   font-size: 16px;
+  transition: all .2s ease;
 }
 
 .navbar > .navbar-list > .navbar-item.active a {
@@ -69,6 +70,12 @@ header > .title-img {
   background-position: center center;
   background-image: url(../images/logo.png);
   height: 100vh;
+  transition: background-size .75s ease;
+  -webkit-transition: background-size .75s ease;
+}
+
+header > .title-img:hover {
+  background-size: 110% 110%;
 }
 
 header > .title-and-cite {
@@ -79,17 +86,24 @@ header > .title-and-cite {
   position: absolute;
   text-align: center;
   color: var(--secondary-color);
-  background-color: var(--header-title-bg-color);
+  animation: titleAndCiteBackgroundAnimation 1s forwards;
+  animation-delay: 2s;
 }
 
 header .title {
   font-family: Spiderman, monospace;
   font-size: 40px;
+  animation: titleAnimation 1s forwards;
+  visibility: hidden;
+  animation-delay: 1s;
 }
 
 header .title-cite {
   font-family: Impact, Spectral, monospace;
   font-size: 20px;
+  animation: citeAnimation 1s forwards;
+  visibility: hidden;
+  animation-delay: 1s;
 }
 
 .section-container {
@@ -118,6 +132,33 @@ header .title-cite {
   height: 250px;
   width: 250px;
   border-radius: 50%;
+}
+
+.flip {
+  height: 305px;
+  position: relative;
+}
+
+.flip-img {
+  position: absolute;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transition: transform .5s;
+}
+
+.back {
+  transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+}
+
+.flip:hover .front {
+  transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+}
+
+.flip:hover .back {
+  transform: rotateY(0);
+  -webkit-transform: rotateY(0);
 }
 
 footer {
@@ -178,4 +219,39 @@ th, td {
 
 tbody > tr:hover {
   background-color: #dedddd;
+}
+
+@keyframes titleAnimation {
+  0% {
+    font-size: 120px;
+  }
+  50% {
+    font-size: 100px;
+  }
+  100% {
+    font-size: 40px;
+    visibility: visible;
+  }
+}
+
+@keyframes citeAnimation {
+  0% {
+    font-size: 60px;
+  }
+  50% {
+    font-size: 50px;
+  }
+  100% {
+    font-size: 20px;
+    visibility: visible;
+  }
+}
+
+@keyframes titleAndCiteBackgroundAnimation {
+  0% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: var(--header-title-bg-color);
+  }
 }
