Scroll spy y form validation

--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,10 @@ input[type=button], input[type=submit], button {
   border-radius: 0px;
 }
 
+button[disabled] {
+  opacity: .5;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
